tests/snapshots/acceptance_harness_test__acceptance_harness__test_harness_after_tab.snap
---
source: tests/acceptance_harness.rs
expression: output
---
Model: claude-opus-4-5-20251101 | Main Agent | /workspace/project | 3 tools, 0 a
┌Conversation [claude-opus-4-5-20251101] (6 entries)───────────────────────────┐
│                                                                              │
│                                                                              │
│Hello                                                                         │
│                                                                              │
│Hi there!                                                                     │
│                                                                              │
│Can you help?                                                                 │
│                                                                              │
│Of course, I'd be happy to help.                                              │
│                                                                              │
│Thanks                                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | [ ]: Tabs | 1-9: Select | ?: Help
