tests/snapshots/acceptance_harness_test__acceptance_harness__test_harness_state_initial.snap
---
source: tests/acceptance_harness.rs
expression: output
---
Model: Opus | Main Agent | /workspace/project | 3 tools, 0 agents, 0 skills
┌Main Agent [Opus] (6 entries)─────────────────────────────────────────────────┐
│                                                                              │
│                                                                              │
│Hello                                                                         │
│                                                                              │
│Hi there!                                                                     │
│                                                                              │
│Can you help?                                                                 │
│                                                                              │
│Of course, I'd be happy to help.                                              │
│                                                                              │
│Thanks                                                                        │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
[LIVE] Wrap: On | q: Quit | ?: Help | /: Search | s: Stats | Tab: Cycle panes
